배너,사이트맵,제철요리 수정

--- a/index.html
+++ b/index.html
@@ -31,7 +31,63 @@
 </head>
 
 <body>
-
+    <div class="visual-modal">
+        <ul class="visual-modal-box clearfix">
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_01.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_02.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_03.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_04.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_05.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_06.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_07.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_08.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_09.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_10.jpg" alt="제품">
+                </a>
+            </li>
+        </ul>
+        <div class="visual-modal-close">
+            <img src="images/btnMoreClose.jpg" alt="닫기">
+        </div>
+    </div>
     <!-- 고정메뉴 -->
     <div class="fixmenu">
         <ul class="fixmenu-list">
@@ -518,7 +574,7 @@
                             지금 바로 이용해 보세요.
                         </p>
 
-                        <a href="#" class="section-bt-1">
+                        <a href="#" class="section-bt">
                             더보기
                         </a>
 
@@ -1154,7 +1210,7 @@
                             뜻깊은 물품소비에 참여해보세요
                         </p>
 
-                        <a href="#" class="section-bt-2">
+                        <a href="#" class="section-bt">
                             더보기
                         </a>
 
@@ -1364,69 +1420,18 @@
                             </a>
                         </div>
                         <div class="cook-right">
-
                             <div class="cook-wrap">
                                 <ul class="cook-list">
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good">
-                                            <img src="images/cook_1.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">중파(500g)</span>
-                                                <span class="cook-good-price">
-                                                    <b>1,950</b>원
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good">
-                                            <img src="images/cook_2.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">멍게살(180g)</span>
-                                                <span class="cook-good-price">
-                                                    <b>8,300</b>원
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good">
-                                            <img src="images/cook_3.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">참기름(150ml)</span>
-                                                <span class="cook-good-price">
-                                                    <b>20,800</b>원
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good">
-                                            <img src="images/cook_4.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">싸먹는감태(10장)</span>
-                                                <span class="cook-good-price">
-                                                    <b>5,600</b>원
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
+                                    
                                 </ul>
                             </div>
-
                             <div class="cook-total">
                                 <button class="cook-bt"></button>
-                                <span class="cook-bt-all">전체선택 <em id="cook-count">4</em>개</span>
+                                <span class="cook-bt-all">전체선택 <em id="cook-count"></em>개</span>
                             </div>
-
                             <a href="#" class="cook-link">
-                                총 <em id="cook-price-total">36,650</em>원 장바구니 담기
+                                총 <em id="cook-price-total"></em>원 장바구니 담기
                             </a>
-
                         </div>
                     </div>
 
@@ -1746,7 +1751,6 @@
                         <li>
                             <dl>
                                 <dt>한살림 가족</dt>
-
                                 <dd><a href="#">한살림연합</a></dd>
                                 <dd><a href="#">한살림생산자연합회</a></dd>
                                 <dd><a href="#">한살림연합 식생활센터</a></dd>
