--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-
     <link rel="apple-touch-icon-precomposed" href="images/mobile_web_icon.png">
+
+    <meta
+    name="description"
+    content="무농약 유기농산물 전문업체, 채소류, 견과류, 곡식류 및 화장품, 생활용품 판매."
+    />
+
+    <meta name="keywords" content="한살림, 한살림장보기, 장보기" />
+    <meta name="author" content="Lee junhong" />
+    <meta name="og:site_name" content="한살림장보기" />
+    <meta name="og:title" content="한살림 장보기 :: 지구를 살리는 뜻깊은 생활실천, 한살림" />
+    <meta
+    name="og:description"
+    content="무농약 유기농산물 전문업체, 채소류, 견과류, 곡식류 및 화장품, 생활용품 판매."
+    />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content=" https://bluej1996.github.io/hansalim" />
+    <meta
+    name="og:image"
+    content="https://github.com/bluej1996/hansalim/images/favicon.ico"
+    />
+
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
