--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
 </head>
 
 <body>
+    <div class="modal">
+        <div class="modal-wrap">
+            <p>
+                이 사이트는 스터디용으로 제작되었으며<br>
+                리소스는 원저작자에게 있습니다.<br>
+                <span>※ 본 사이트는 Chrome에 최적화 되어있습니다.</span><br>
+            </p>
+            <button class="modal-review-bt">review</button>
+            <button class="modal-close">close</button>
+        </div>
+        <div class="modal-review">
+            <p>
+                <span>스터디용 클론코딩</span><br>
+                1. favicon 추가<br>
+                2. html, css, javaScript, jQuery를 사용하였습니다.<br>
+                3. swiper, nicescroll 사용
+            </p>
+            <button class="modal-close-2">close</button>
+        </div>
+    </div>
     <div class="visual-modal">
         <ul class="visual-modal-box clearfix">
             <li>
